create crud to roles

--- a/templates/base.html
+++ b/templates/base.html
@@ -56,6 +56,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#"><i class="bi bi-clipboard-heart me-2"></i> Atender cita</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/admin"><i class="bi bi-person-gear me-2"></i> Admin</a>
+                </li>
             </ul>
         </div>
 
