--- a/templates/base.html
+++ b/templates/base.html
@@ -17,8 +17,7 @@
         <div class="sidebar">
             <div class="user-profile">
                 <img src="{{ url_for('static', filename='images/profile_def.png') }}" alt="Usuario">
-                <h6 class="mb-0">Dr. Juan Pérez</h6>
-                <small>Odontologo</small>
+                <h6 class="mb-0">{{ sesion_templates.persona.nombres }} {{ sesion_templates.persona.apellidos }}</h6>
             </div>
             <ul class="nav flex-column mt-3">
                 <li class="nav-item">
@@ -50,15 +49,19 @@
                         </ul>
                     </div>
                 </li>
+                {% if sesion_templates.rol != 3 %}
                 <li class="nav-item">
                     <a class="nav-link" href="/pacientes/all"><i class="bi bi-people me-2"></i> Pacientes</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#"><i class="bi bi-clipboard-heart me-2"></i> Atender cita</a>
                 </li>
+                {% endif %}
+                {% if sesion_templates.rol == 1 %}
                 <li class="nav-item">
                     <a class="nav-link" href="/admin"><i class="bi bi-person-gear me-2"></i> Admin</a>
                 </li>
+                {% endif %}
             </ul>
         </div>
 
@@ -87,22 +90,8 @@
                     <h1 class="mb-0 fw-bold">OdontoCitas</h1>
                 </div>
                 <div class="d-flex align-items-center">
-                    <a href="#" class="btn btn-light position-relative me-3">
-                        <i class="bi bi-bell"></i>
-                        <span
-                            class="position-absolute top-0 start-100 translate-middle badge rounded-pill notification-badge">
-                            3
-                        </span>
-                    </a>
-                    <a href="#" class="btn btn-light position-relative me-3">
-                        <i class="bi bi-envelope"></i>
-                        <span
-                            class="position-absolute top-0 start-100 translate-middle badge rounded-pill notification-badge">
-                            5
-                        </span>
-                    </a>
-                    <a href="#" class="btn btn-light">
-                        <i class="bi bi-gear"></i>
+                    <a href="/logout" class="btn btn-light">
+                        <i class="bi bi-box-arrow-left"></i>
                     </a>
                 </div>
             </div>
