--- a/templates/home.html
+++ b/templates/home.html
@@ -47,7 +47,7 @@
                 <i class="bi bi-file-earmark-text me-2"></i>Visualizar Recetas Médicas
             </button>
             <button class="btn btn-secondary">
-                <i class="bi bi-journal-medical me-2"></i>Visualizar Historial Médico
+                <a href="{{ url_for('historialMedico_view.get_historiales') }}" class="bi bi-journal-medical me-2"></a> Visualizar Historial Médico
             </button>
         </div>
     </div>
